--- a/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Shared/MainLayout.razor
+++ b/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Shared/MainLayout.razor
@@ -1,19 +1,18 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider />
+<MudThemeProvider @bind-IsDarkMode="@_isDarkMode" Theme="_theme"/>
 <MudDialogProvider />
 <MudSnackbarProvider />
 
 <MudLayout>
     <MudAppBar Elevation="0">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        <MudSpacer />
-        <MudIconButton Icon="@Icons.Custom.Brands.MudBlazor" Color="Color.Inherit" Link="https://mudblazor.com/" Target="_blank" />
-        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/MudBlazor/MudBlazor/" Target="_blank" />
+        <MudSpacer />  
+        <MudSwitch @bind-Checked="@_isDarkMode" Color="Color.Primary" Class="ma-4" T="bool" Label="Темный/Светлый режим"/>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h6">CalculationMethods.Presentation.Blazor</MudText>
+            <MudText Align="Align.Center" Typo="Typo.h6">Методы вычислений</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
@@ -25,6 +24,9 @@
 </MudLayout>
 
 @code {
+    private bool _isDarkMode = false;
+    private MudTheme _theme = new MudTheme();
+
     bool _drawerOpen = true;
 
     void DrawerToggle()
