--- a/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Shared/NavMenu.razor
+++ b/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="/lu_factorization" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">LU-разложение</MudNavLink>
+    <MudNavLink Href="/matrix" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">matrix</MudNavLink>
 </MudNavMenu>
