Привязка в цикле с использованием локальной переменной

--- a/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Components/MatrixComponent.razor
+++ b/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Components/MatrixComponent.razor
@@ -2,14 +2,13 @@
 
 @using CalculationMethods.Core.Entities
 @using CalculationMethods.Infrastructure.Entities.Double
-@using CalculationMethods.Presentation.Blazor.Models
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="1" Class="align-self-center">
         <MudText Align="Align.Center" Typo="Typo.h4">@Name = </MudText>
     </MudItem>
     <MudItem xs="11">
-        @if (matrix == null)
+        @if (Matrix == null)
         {
             <MudProgressCircular Indeterminate="true"></MudProgressCircular>
         }
@@ -17,13 +16,15 @@
         {
             <MudSimpleTable Striped="false" Bordered="true">
                 <tbody>
-                    @foreach (List<Value> row in _matrix)
+                    @for (int i = 0; i < Matrix.RowsCount; i++)
                     {
+                        int row = i;
                         <tr>
-                            @foreach (Value item in row)
+                            @for (int j = 0; j < Matrix.ColsCount; j++)
                             {
+                                int col = j;
                                 <td>
-                                    <MudNumericField @bind-Value="item.Element" Variant="Variant.Text" Step="0.25"/>
+                                    <MudNumericField @bind-Value="Matrix[row, col]" Variant="Variant.Text" Step="0.25"/>
                                 </td>
                             }
                         </tr>
@@ -36,27 +37,14 @@
 
 
 @code {
-    private IMatrix<double> matrix { get; set; }
-    private List<List<Value>> _matrix;
+    [Parameter]
+    public IMatrix<double> Matrix { get; set; }
     [Parameter]
     public string Name { get; set; } = "A";
-    [Parameter]
-    public int RowsCount { get; set; } = 5;
-    [Parameter]
-    public int ColsCount { get; set; } = 5;
 
     protected override void OnInitialized()
     {
-        matrix = new DoubleSquareMatrix(RowsCount);
-        _matrix = new List<List<Value>>();
-        for (int i = 0; i < RowsCount; i++)
-        {
-            _matrix.Add(new List<Value>());
-            for (int j = 0; j < ColsCount; j++)
-            {
-                _matrix[i].Add(new Value { Element = i });
-            }
-        }
+        Matrix = new DoubleSquareMatrix(5);
         base.OnInitialized();
     }
 }
