--- a/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Pages/LUFactorization.razor
+++ b/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Pages/LUFactorization.razor
@@ -56,7 +56,7 @@
         <MudText Typo="Typo.h4" Align="Align.Center"> * </MudText>
     </MudItem>
     <MudItem xs="2" Class="justify-content-center align-content-center">
-        <VectorComponent Mode="DisplayMode.Vertical" Vector="_solutionVector" VectorXS="4" Editable="_editable"></VectorComponent>
+        <VectorComponent Mode="DisplayMode.Vertical" Vector="_variablesVector" VectorXS="4" Editable="false"></VectorComponent>
     </MudItem>
     <MudItem xs="1" Class="align-self-center">
         <MudText Typo="Typo.h4" Align="Align.Center"> = </MudText>
@@ -71,7 +71,7 @@
         <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Secondary" Command="ClearMatrixCommand">Очистить</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" @onclick="@(() => _isSolutionVisible = true)">Решить</MudButton>
+        <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" Command="SolveCommand">Решить</MudButton>
     </MudItem>
 </MudGrid>
 
