Возможность влиять на отображение элементов в матрице и векторе, колхоз с исходными данными

--- a/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Components/MatrixComponent.razor
+++ b/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Components/MatrixComponent.razor
@@ -32,7 +32,7 @@
                                     else
                                     {
                                         <MudText>
-                                            @Matrix[row, col]
+                                            @Display.Invoke(Matrix[row, col])
                                         </MudText>
                                     }
                                 </td>
