--- a/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Components/VectorComponent.razor
+++ b/Presentation/Blazor/CalculationMethods.Presentation.Blazor/Components/VectorComponent.razor
@@ -30,7 +30,7 @@
                                     }
                                     else
                                     {
-                                        @Vector[index]
+                                        @Display(Vector[index])
                                     }
                                 </td>
                             }
@@ -50,7 +50,7 @@
                                     else
                                     {
                                         <MudText>
-                                            @Vector[index]
+                                            @Display(Vector[index])
                                         </MudText>  
                                     }
                                 </td>
